--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8"/>
-<title>Meu site</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/arquivo.css">
+    <title>Teste</title>
+    <a href=""></a>
 </head>
 <body>
-
-    <h1> Site Teste</h1>
-<!-- Conteúdo -->
-<p>não tem nada</p>
+    <h1>Titulo inútil</h1>
+    <p>Aqui não tem nada</p>
+    <a href="/pagina1.html">TESTE</a>
 </body>
 </html>
